01-tekton-deploy/01-VirtualService-tekton-dashboard.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  host: tekton-dashboard
  trafficPolicy:
    tls:
     mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: tekton-dashboard-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - "tekton.icloud2native.com"
    - "ci.icloud2native.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tekton-dashboard-virtualservice
  namespace: tekton-pipelines
spec:
  gateways:
  - istio-system/tekton-dashboard-gateway
  hosts:
  - "tekton.icloud2native.com"
  - "ci.icloud2native.com"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tekton-dashboard
        port:
          number: 9097
---
